# nodus-circuit-breaker

./: CHANGELOG.md  CONTRIBUTING.md  README.md  llms.txt  pyproject.toml
nodus_circuit_breaker/: __init__.py  breaker.py  llm.py
tests/: test_breaker.py  test_llm_adapter.py
